# torchlens

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  LIMITATIONS.md  MIGRATIONS.md  NOTICE  README.md  RESULTS.md  ROADMAP.md  TODO.md  debug_example_networks.py  debug_tensors_thru_alexnet.py  debug_tensors_thru_simple_network.py  debug_torchlens.py  demos.ipynb  graph_funcs.py  graph_testing.ipynb  ignored_funcs.txt  model_funcs.py  model_handling.py  network_testing.ipynb  networks.py  pyproject.toml  pytorch_xray.py  requirements.test.txt  requirements.txt  roadmap.txt  setup.py  tensor_tracking.py  tensor_tracking_funcs.py  test_func_handling.ipynb  test_models.py  tests.py  torch_func_handling.py  torch_func_handling_debug.py  (+7 more)
.github/: CLAUDE.md
.github/workflows/: audit-notebooks.yml  lint.yml  lint_and_test.yml  quality.yml  release.yml  tests.yml
.project-context/: architecture.md  conventions.md  exception_taxonomy_proposal.md  glossary_walkthrough_deltas.md  known_bugs.md  known_naming_items.md  method_ledger.md  phase_0_5_audit_report.md  state_of_torchlens.md  todos.md  torchlens_glossary.md  torchlens_glossary_CHANGES.md
.project-context/knowledge/: decisions.md  gotchas.md  io_architecture.md
.project-context/research/: adversarial.md  ast-design.md  backward_pass_sprint.md  fastlog_postfunc_parity_2026-04-27.md  prior-art.md  (+6 more)
.research/: backward-parity-impl_P3_DONE.md  backward-parity-impl_P4_DONE.md  backward-parity-impl_P6_DONE.md  backward-parity-impl_P7B_DONE.md  backward-parity-impl_P7C_DONE.md  backward-parity-impl_P7_DONE.md  backward-parity-sprint_STATE.md  backward-parity-sprint_SUMMARY.md  backward-pass_SPEC.md  buffer-build_STATE.md  buffer-build_SUMMARY.md  buffer-overnight_STATE.md  buffer-overnight_SUMMARY.md  docs-plan-megasprint_PLAN_v33.md  docs-plan-megasprint_PLAN_v34.md  docs-plan-megasprint_PLAN_v35.md  docs-plan-megasprint_PLAN_v36.md  edges-proposal.md  facets-proposal.md  facets-sprint-plan.md  facets-sprint_STATE.md  facets-sprint_SUMMARY.md  facets_confirm_claude.md  facets_confirm_codex.md  facets_plan_review_claude.md  facets_plan_review_codex.md  glossary_v9_working.md  intervention_tensor_label_fix_report.md  jax-tinygrad-build_STATE.md  module-containment-refactor_STATE.md  module-containment-refactor_SUMMARY.md  perf-build_STATE.md  polish-sprint_STATE.md  polish-sprint_SUMMARY.md  post-backward-impl_FINALIZE_DONE.md  post-backward-impl_P1_DONE.md  post-backward-impl_P2_DONE.md  post-backward-impl_P3_DONE.md  post-backward-impl_P4_DONE.md  post-backward-impl_P5_DONE.md  (+13 more)
benchmarks/: README.md  generate_perf_numbers.py  intervention_overhead.py  intervention_overhead_results.md  op_slots_baseline.py  perf_gate.py  perf_models.py  perf_peers.py  perf_results_2026-05-14.json  perf_results_2026-05-14.md  perf_results_provisional.md  perf_runner.py  perf_suite.py
demos/: demos.ipynb  gallery.ipynb  tutorial.ipynb
docs/: LICENSE  LIMITATIONS.md  _perf_numbers.md  _perf_numbers_provisional.md  activation_transform_persistence.md  backends.md  backward.md  buffers.md  conditional_attribution.md  containers.md  elk_setup.md  facets.md  for-ai-agents.md  intervention_api.md  intervention_explainers.md  method_x_model_compatibility.md  performance.md  rank_layout.md  requirements.txt  semantic_io.md  speed_optimized_defaults.md  visibility.md
examples/: auto_collapse_sample_renders.py  capture_unification_selective.py  debug_utilities.py  semantic_io_legibility_demo.py  vmap_masked_toy_transformer.py
menagerie/: .gitignore  CEILING_LOG.md  CRAWL_LOG.md  DISCOVER_MODELS.md  HARVEST_SOURCES.md  METHODOLOGY.md  PRIOR_ART_LESSONS.md  README.md  UPDATE_RECIPE.md  __init__.py  catalog.py  dedup_report.py  discover_crawler.py  generate_menagerie.py  run_across_envs.py  validate_menagerie.py
notebooks/: _demo_models.py  backward_tutorial.ipynb  capture_unification_demo.ipynb  facets_tutorial.ipynb  fastlog_tutorial.ipynb  huggingface_tutorial.ipynb  semantic_io_keystone_demo.ipynb  source_code_extraction.ipynb  torchlens_in_10_minutes.ipynb  training_tutorial.ipynb
scripts/: AGENTS.md  CLAUDE.md  bench_log_forward_pass.py  build_torchlens_theme_gallery.py  check_audit_coverage.py  check_coverage_delta.py  check_flops_coverage.py  check_no_breaking_markers.py  check_plan_link_consistency.py  generate_audit_coverage_manifest.py  no_major_parser.py  render_large_graph.py  run_1M.py  run_250k.py
tests/: AGENTS.md  CLAUDE.md  RESULTS.md  _module_containment_snapshot.py  _pickle_compare.py  _pickle_compare_allowlist.py  conftest.py  debug_example_networks.py  debug_tensors_thru_alexnet.py  debug_tensors_thru_simple_network.py  example_models.py  graph.gv  graphviz_testing.ipynb  make_example_visuals.ipynb  output_pray  test_activation_postfunc_refactor.py  test_animation.py  test_annotations_b1.py  test_api_renames.py  test_api_surface.py  test_api_surface_deprecation.py  test_api_surface_sweep.py  test_append_semantics.py  test_append_streaming.py  test_append_validator.py  test_arg_kwargs_extraction.py  test_arg_positions.py  test_arg_spec_coverage.py  test_ast_branches.py  test_attribution.py  test_attribution_layer.py  test_auto_capture.py  test_auto_collapse_metrics.py  test_autograd_saved_bytes.py  test_autoroute_output_a2.py  test_autoroute_registry.py  test_backend_registry.py  test_backward.py  test_backward_attribution_unchanged.py  test_backward_call_context.py  (+257 more)
torchlens/: AGENTS.md  CLAUDE.md  __init__.py  _chunking.py  _debug.py  _deprecations.py  _errors.py  _input_coerce.py  _literals.py  _robustness.py  _run_state.py  _source_links.py  _state.py  _tl.py  _trace_state.py  _training_validation.py  captured_run.py  cleanup.py  constants.py  decorate_torch.py  decorator.py  flops.py  graph_handling.py  helper_funcs.py  interface.py  logging_funcs.py  model_funcs.py  model_history.py  observers.py  options.py  opts.yaml  postprocess.py  quantities.py  tensor_log.py  tensor_tracking.py  torch_decorate.py  trace_model.py  types.py  user_funcs.py  validate.py  (+2 more)
(+1758 files in other folders)
