[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "torchlens"
version = "0.14.0"
description = "A package for extracting activations from PyTorch models"
readme = "README.md"
license = "GPL-3.0-only"
requires-python = ">=3.9"
authors = [
    {name = "JohnMark Taylor", email = "johnmarkedwardtaylor@gmail.com"},
]
keywords = ["torch", "torchlens", "features"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy",
    "pandas",
    "torch",
    "tqdm",
    "ipython",
    "graphviz",
]

[project.optional-dependencies]
dev = ["ruff", "pytest", "pytest-cov", "mypy", "pip-audit", "pre-commit"]
test = [
    "lightning",
    "pillow",
    "pytest",
    "requests",
    "soxr",
    "timm",
    "torchaudio",
    "torch_geometric",
    "torchvision",
    "transformers",
    "visualpriors",
]

[project.urls]
Homepage = "https://github.com/johnmarktaylor91/torchlens"
Repository = "https://github.com/johnmarktaylor91/torchlens"

[tool.setuptools.packages.find]
include = ["torchlens*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["torchlens"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "tests/test_outputs/coverage_html"

[tool.coverage.lcov]
output = "tests/test_outputs/coverage.lcov"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Lenient for now — tighten as annotations improve
check_untyped_defs = false
disallow_untyped_defs = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E721", "F401"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["torchlens/__init__.py:__version__"]
branch = "main"
major_on_zero = true
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version}"

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true
