[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "torchlens"
version = "2.17.0"
description = "A package for extracting activations from PyTorch models and saving portable bundles"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "JohnMark Taylor", email = "johnmarkedwardtaylor@gmail.com"},
]
keywords = ["torch", "torchlens", "activations", "features", "io"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "numpy",
    "packaging",
    # torch>=2.4 required: torch.is_autocast_enabled(device_type) and
    # torch.get_autocast_dtype(device_type) (used in torchlens/utils/rng.py)
    # only accept a device_type argument on torch 2.4+.
    "torch>=2.4",
    "safetensors>=0.4",
    "tqdm",
    "graphviz",
]

[project.optional-dependencies]
viewer = []
paper = []
notebook = ["ipython>=8.0", "jupyter-client>=8.0"]
llm = []
neuro = ["rsatoolbox~=0.1.5", "brain-score~=2.2"]
viz = ["torchshow~=0.5", "lovely-tensors~=0.1.18"]
tabular = ["pandas>=2.0", "pyarrow>=14"]
captum = ["captum~=0.7"]
sae = ["sae-lens~=4.0"]
profiler = []
lightning = ["lightning~=2.4"]
wandb = ["wandb>=0.16"]
hf = ["transformers~=4.45", "timm~=1.0"]
gradcam = ["pytorch-grad-cam~=1.5"]
shap = ["shap~=0.46"]
inseq = ["inseq~=0.6"]
steering = ["steering-vectors~=0.1"]
repeng = ["repeng~=0.4"]
dialz = ["dialz~=0.2"]
nnsight = ["nnsight~=0.4"]
lit = ["lit-nlp~=1.3"]
depyf = ["depyf~=0.18"]
compat-shims = ["torchextractor>=0.3,<2", "sentence-transformers>=2.5,<5"]
vision-shims = ["torchvision>=0.18,<1"]
all = []
all-stretch = [
    "pytorch-grad-cam~=1.5",
    "shap~=0.46",
    "inseq~=0.6",
    "steering-vectors~=0.1",
    "repeng~=0.4",
    "dialz~=0.2",
    "lit-nlp~=1.3",
    "depyf~=0.18",
    "torchextractor>=0.3,<2",
    "sentence-transformers>=2.5,<5",
    "torchvision>=0.18,<1",
    "torchshow~=0.5",
    "lovely-tensors~=0.1.18",
]
dev = ["ruff", "pytest", "pytest-cov", "mypy", "pip-audit", "pre-commit"]
io = ["pyarrow"]
test = [
    "lightning",
    "pillow",
    "pytest",
    "requests",
    "soxr",
    "timm",
    "torchaudio",
    "torch_geometric",
    "torchvision",
    "transformers",
    "visualpriors",
]

[project.urls]
Homepage = "https://github.com/johnmarktaylor91/torchlens"
Repository = "https://github.com/johnmarktaylor91/torchlens"

[tool.setuptools.packages.find]
include = ["torchlens*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "smoke: marks tests as smoke tests for quick critical-path validation (select with '-m smoke')",
    "rare: marks tests that are always excluded unless explicitly requested (select with '-m rare')",
]
addopts = "-m 'not rare'"
filterwarnings = [
    # External: torchvision model init deprecations
    "ignore:The default weight initialization of.*:FutureWarning",
    # External: torch.meshgrid indexing argument
    "ignore:torch.meshgrid.*:UserWarning",
    # External: timm deprecated model name mappings
    "ignore:Mapping deprecated model name.*:UserWarning",
    # External: torch.nn.utils.weight_norm deprecation
    "ignore:`torch.nn.utils.weight_norm` is deprecated.*:FutureWarning",
    # External: complex-to-real casting warning
    "ignore:Casting complex values to real.*:UserWarning",
    # External: transformer nested_tensor batch_first warning
    "ignore:enable_nested_tensor is True.*:UserWarning",
]

[tool.coverage.run]
source = ["torchlens"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "tests/test_outputs/reports/coverage_html"

[tool.coverage.lcov]
output = "tests/test_outputs/coverage.lcov"

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
# Lenient for now - tighten as annotations improve
check_untyped_defs = false
disallow_untyped_defs = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E721", "F401"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["torchlens/__init__.py:__version__"]
branch = "main"
major_on_zero = true
build_command = "pip install build && python -m build"
commit_message = "chore(release): {version}"

[tool.semantic_release.remote]
type = "github"
token = { env = "GH_TOKEN" }

[tool.semantic_release.publish]
upload_to_vcs_release = true
